# datascience-rtm-hackathon

./: .gitignore  README.md  pyproject.toml
data/: 7e4c0b47-20cd-4a4f-abf3-c54ee5d85df7_datadictionary.xlsx  c37e916d-3656-41fe-97da-f0bc860d6711_city.csv
data/aggregated/: competitors_weekly_data.csv  market_competitors_influence_weekly_data.csv  market_influencers_weekly_data.csv  merged_grouped_sales_data.csv
data/intermediate_data/: marketing_city.csv
data/processed/: city_processed.csv  consumer_behavior_processed.csv  market_influencers_processed.csv  products_processed.csv
data/raw/: city.csv  competitivelandscape.csv  consumerbehavior.csv  externalmarketinfluencers.csv  products.csv
docs/: Feature Engineering.docx  Understanding the Key Drivers.docx
eda/: city_data_profile.html  competitor.ipynb  competitor_eda.html  competitors_data_profile.html  eda_utils.py  external_market_influence_data_profile.html  products_data_profile.html  sales_data_profile.html  snowflake-mlops-bot.xlsx
eda/reports/processed/: city_data_profile.html  competitors_data_profile.html  customer_behavior_data_profile.html  (+3 more)
eda_reports/: competitor_eda.html  customer_behavior_data_profile.html  external_market_influence_data_profile.html  marketing_city.html  products_data_profile.html
intermediate_data/: marketing_city.csv
src/01 eda/: EDA.ipynb  competitor.ipynb  consumer.ipynb  initial.ipynb  marketing.ipynb  preprocessing.ipynb  sales.ipynb
src/02 model training/: feature_engineering.ipynb  training.ipynb
src/02_feature_engineering/: initial.ipynb
(+4 files in other folders)
