[project]
name = "datascience-rtm-hackathon"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "autoviz>=0.1.807",
    "pandas>=2.0.3",
    "pandas-profiling[notebook]>=3.6.6",
    "seaborn>=0.13.2",
    "ydata-profiling>=4.13.0",
]

[dependency-groups]
dev = [
    "ipykernel>=6.29.5",
]

[tool.uv.workspace]
members = ["datascience-rtm-hackathon"]
