[project]
name = "datascience-rtm-hackathon"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "dash-daq==0.5.0",
    "dtale>=3.16.1",
    "ipywidgets>=8.1.5",
    "kaleido==0.2.0",
    "nbformat>=5.10.4",
    "pandas>=2.0.3",
    "plotly>=6.0.0",
    "setuptools>=75.9.1",
    "ydata-profiling>=4.13.0",
]

[dependency-groups]
dev = [
    "ipykernel>=6.29.5",
]

[tool.uv.workspace]
members = ["datascience-rtm-hackathon"]
